# pvxs

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  COPYRIGHT  INSTALLATION.md  MANIFEST.in  Makefile  README.md  TROUBLESHOOTING.md  abi-diff.sh  building.html  cli.html  client.html  coverage.sh  defaults.set  details.html  example.html  genindex.html  gha-set-pre.py  index.html  ioc.html  meson.build  meson_options.txt  msenv.bat  netconfig.html  nt.html  ntscalar.html  objects.inv  overview.html  pvalink.html  pyproject.toml  qgroup.html  release.md  releasenotes.html  search.html  searchindex.js  server.html  setup.py  (+7 more)
.ci-local/: appveyor-libevent.py  cdt-check.sh  codespell.dic  defaults.set  disable-fortify.py  libevent.py  nofortify.set  travis-inspect.sh  travis-libevent.py  travis-libevent.sh  ubsan.supp  withenv.sh
_sources/: details.rst.txt  example.rst.txt  index.rst.txt  overview.rst.txt  releasenotes.rst.txt  server.rst.txt  source.rst.txt  typedef.rst.txt
bundle/: .gitignore  (+1 more)
example/: Makefile  client.cpp  mailbox.cpp  meson.build  rpc_client.cpp  rpc_server.cpp  simpleget.cpp  simplesrv.cpp  spam.cpp  ticker.cpp
example/docker/: build-all.sh  build.sh  docker_push.sh
example/docker/epics-base/: Dockerfile  build.sh  build_docker.sh
example/docker/pvxs/: Dockerfile  build.sh  build_docker.sh
example/docker/spva_jwt/: Dockerfile  app.py  build_docker.sh  jwt-issuer-supervisor.conf  pvacms_bashrc  requirements.txt
example/docker/spva_krb/: Dockerfile  badpass.txt  build.sh  build_docker.sh  kadm5.acl  kdc.conf  krb5-epics-local.conf  krb5-kdc-supervisor.conf  pvacms_bashrc  run_docker.sh
example/docker/spva_krb5/: Dockerfile  krb5-admin-server-supervisor.conf  krb5.conf
example/docker/spva_ldap/: Dockerfile  build.sh  build_docker.sh  epics-acl.ldif  epics-schema.ldif  ldap-data.ldif  ldap-supervisor.conf  slsapd.conf  sssd-supervisor.conf  sssd.conf  start.sh
example/docker/spva_std/: Dockerfile  admin_bashrc  build.sh  build_docker.sh  client_bashrc  pvacms-supervisor.conf  pvacms_bashrc  softioc_bashrc  supervisord.conf
example/kubernetes/: README.md  helpers.sh
example/kubernetes/docker/: build.sh  docker_push.sh
example/kubernetes/docker/gateway/: Dockerfile  build_docker.sh  gateway-supervisor.conf  gateway.acf  gateway.conf  gateway.pvlist  gateway_bashrc
example/kubernetes/docker/lab/: Dockerfile  build_docker.sh  guest_bashrc  operator_bashrc
example/kubernetes/docker/lab_base/: Dockerfile  build_docker.sh  supervisord.conf
example/kubernetes/docker/pvacms/: Dockerfile  admin_bashrc  build_docker.sh  pvacms-supervisor.conf  pvacms_bashrc
example/kubernetes/docker/testioc/: Dockerfile  build_docker.sh  testioc-supervisor.conf  testioc.acf  testioc_bashrc
example/kubernetes/docker/tstioc/: Dockerfile  build_docker.sh  tstioc-supervisor.conf  tstioc.acf  tstioc_bashrc
example/kubernetes/helm/pvxs-lab/: Chart.yaml  README.md  values.yaml
example/kubernetes/helm/pvxs-lab/templates/: _helpers.tpl  gateway-configmap.yaml  gateway-deployment.yaml  gateway-service.yaml  lab-deployment.yaml  networkpolicy.yaml  pvacms-deployment.yaml  pvacms-service.yaml  pvc.yaml  testioc-deployment.yaml  testioc-service.yaml  tstioc-deployment.yaml  tstioc-service.yaml
ioc/: Makefile  channel.cpp  channel.h  credentials.cpp  credentials.h  dbentry.h  dberrormessage.cpp  dberrormessage.h  dbeventcontextdeleter.h  dblocker.h  dbmanylocker.h  demo.cpp  dummygroup.cpp  dummysingle.cpp  field.cpp  field.h  fieldconfig.h  fielddefinition.cpp  fielddefinition.h  fieldname.cpp  fieldname.h  fieldnamecomponent.h  fieldsubscriptionctx.cpp  fieldsubscriptionctx.h  group.cpp  group.h  groupconfig.h  groupconfigprocessor.cpp  groupconfigprocessor.h  groupdefinition.h  groupprocessorcontext.cpp  groupprocessorcontext.h  groupsource.cpp  groupsource.h  groupsourcehooks.cpp  groupsrcsubscriptionctx.h  imagedemo.c  iochooks.cpp  iocserver.h  iocshargument.h  (+33 more)
ioc/pvxs/: credentials.h  iochooks.h
src/: Makefile  bitmask.cpp  bitmask.h  certdate.h  certfactory.cpp  certfactory.h  certfilefactory.cpp  certfilefactory.h  certstatus.cpp  certstatus.h  certstatusclient.cpp  certstatusclient.h  certstatusexdata.cpp  certstatusexdata.h  certstatusmanager.cpp  certstatusmanager.h  client.cpp  clientconn.cpp  clientdiscover.cpp  clientget.cpp  clientimpl.h  clientintrospect.cpp  clientmon.cpp  clientreq.cpp  config.cpp  conn.cpp  conn.h  data.cpp  dataencode.cpp  dataencode.h  datafmt.cpp  dataimpl.h  describe.cpp  describe.h@  evhelper.cpp  evhelper.h  idfilereader.cpp  idfilereader.h  instcounters.h  json.cpp  (+46 more)
src/os/WIN32/: osdSockExt.cpp
src/os/default/: osdSockExt.cpp
src/pvxs/: bitmask.h  client.h  config.h  data.h  json.h  log.h  netcommon.h  nt.h  server.h  sharedArray.h  sharedpv.h  sharedwildcardpv.h  source.h  srvcommon.h  sslinit.h  unittest.h  util.h  version.h  versionNum.h@
src/security/: Makefile  auth.h  authregistry.cpp  authregistry.h  certfactory.cpp  certfactory.h  keychainfactory.cpp  keychainfactory.h  openssl.cpp  openssl.h
src/security/authdefault/: Makefile  authdefault.cpp
src/security/authjwt/: Makefile  authjwt.cpp
src/security/authkrb/: Makefile  authkrb.cpp
src/security/authldap/: Makefile  authldap.cpp
test/: Makefile  batch.db  benchdata.cpp  capturestd.cpp  capturestd.h  certcontext.h  const.db  countdown.cpp  dummyserv.cpp  eatspam.cpp  gen_test_certs.cpp  gen_test_certs_j.sh  image.db  image.json  iq.db  jwt-sign-in.mhtml  jwt_tester.py  jwtlogintest.cpp  mailbox.cpp  mcat.cpp  meson.build  ntenum.db  perftls.cpp  perftls.h  qgroup.cmd  qgroup.json  secidxgroup.db  spam.cpp  table.db  tableorder.db  test1000.cpp  testasn1uint64.cpp  testbitmask.cpp  testcerts.h  testclientconn.cpp  testconfig.cpp  testdata.cpp  testdiscover.cpp  testendian.cpp  testev.cpp  (+43 more)
tools/: Makefile  call.cpp  ccr.sh  cert.cpp  cliutil.cpp  cliutil.h  get.cpp  info.cpp  list.cpp  meson.build  monitor.cpp  mshim.cpp  ocsppva.cpp  put.cpp  pvacms.cpp  pvacms.h  pvxvct.cpp  status.cpp  testcliutil.cpp  testxput.cpp
(+202 files in other folders)
